--- a/General-Desktop-Application/General-Desktop-Application/App.config
+++ b/General-Desktop-Application/General-Desktop-Application/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="General_Desktop_Application.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
     </startup>
+    <userSettings>
+        <General_Desktop_Application.Properties.Settings>
+            <setting name="IP" serializeAs="String">
+                <value>192.168.</value>
+            </setting>
+            <setting name="Port" serializeAs="String">
+                <value>1433</value>
+            </setting>
+            <setting name="Local" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Instance" serializeAs="String">
+                <value />
+            </setting>
+        </General_Desktop_Application.Properties.Settings>
+    </userSettings>
 </configuration>
