I've added EntityFramework and too, I've already finish installation section of MSSQL

--- a/General-Desktop-Application/General-Desktop-Application/App.config
+++ b/General-Desktop-Application/General-Desktop-Application/App.config
@@ -1,27 +1,46 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="General_Desktop_Application.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
-    </startup>
-    <userSettings>
-        <General_Desktop_Application.Properties.Settings>
-            <setting name="IP" serializeAs="String">
-                <value>192.168.</value>
-            </setting>
-            <setting name="Port" serializeAs="String">
-                <value>1433</value>
-            </setting>
-            <setting name="Local" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="Instance" serializeAs="String">
-                <value />
-            </setting>
-        </General_Desktop_Application.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="General_Desktop_Application.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+  </startup>
+  <userSettings>
+    <General_Desktop_Application.Properties.Settings>
+      <setting name="IP" serializeAs="String">
+        <value>192.168.</value>
+      </setting>
+      <setting name="Port" serializeAs="String">
+        <value>1433</value>
+      </setting>
+      <setting name="Local" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="Instance" serializeAs="String">
+        <value />
+      </setting>
+    </General_Desktop_Application.Properties.Settings>
+  </userSettings>
+  <connectionStrings>
+    
+    <!--<add name="straad_generaldesktopapplication_pcpcpcpc_001Entities" connectionString="metadata=res://*/EF.Model.csdl|res://*/EF.Model.ssdl|res://*/EF.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC-DELL-STRAAD\STRAAD1703142156;initial catalog=straad_generaldesktopapplication_Ct1x9w3c_001;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+
+    <!--<add name="straad_generaldesktopapplication_cpcpcpcp_001Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC-DELL-STRAAD\STRAAD1703142156;initial catalog=straad_generaldesktopapplication_cpcpcpcp_001;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="straad_generaldesktopapplication_cpcpcpcp_001Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.100;initial catalog=straad_generaldesktopapplication_cpcpcpcp_001;user id=internal_straad_generaldesktopapplication_cpcpcpcp_001;password=6[A9$Sd#u-5C,HJUsm_5Rxts-CtVa,7SmE6;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
