--- a/General-Desktop-Application/General-Desktop-Application/General-Desktop-Application.csproj
+++ b/General-Desktop-Application/General-Desktop-Application/General-Desktop-Application.csproj
@@ -62,6 +62,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessLayer\Business.cs" />
+    <Compile Include="BusinessLayer\CityB.cs" />
+    <Compile Include="BusinessLayer\CountryB.cs" />
+    <Compile Include="BusinessLayer\DateB.cs" />
+    <Compile Include="BusinessLayer\PreferenceB.cs" />
+    <Compile Include="BusinessLayer\ResourceB.cs" />
+    <Compile Include="BusinessLayer\SessionB.cs" />
+    <Compile Include="BusinessLayer\StateB.cs" />
+    <Compile Include="BusinessLayer\UserB.cs" />
     <Compile Include="Classes\Network.cs" />
     <Compile Include="Classes\Preferences.cs" />
     <Compile Include="Classes\SQLServer.cs" />
@@ -205,6 +213,7 @@
     <EmbeddedResource Include="Resources\Scripts\Initializer.sql" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Reports\" />
     <Folder Include="Resources\Executables\" />
     <Folder Include="Resources\Libraries\" />
     <Folder Include="Resources\Logos\" />
