--- a/General-Desktop-Application/General-Desktop-Application/General-Desktop-Application.csproj
+++ b/General-Desktop-Application/General-Desktop-Application/General-Desktop-Application.csproj
@@ -180,6 +180,12 @@
     <Compile Include="Presentation\Form_004_002.Designer.cs">
       <DependentUpon>Form_004_002.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presentation\Form_004_003.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentation\Form_004_003.Designer.cs">
+      <DependentUpon>Form_004_003.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentation\Form_004_004.cs">
       <SubType>Form</SubType>
     </Compile>
