--- a/General-Desktop-Application/General-Desktop-Application/App.config
+++ b/General-Desktop-Application/General-Desktop-Application/App.config
@@ -26,15 +26,14 @@
       </setting>
     </General_Desktop_Application.Properties.Settings>
   </userSettings>
+  
   <connectionStrings>
     
-    <!--<add name="straad_generaldesktopapplication_pcpcpcpc_001Entities" connectionString="metadata=res://*/EF.Model.csdl|res://*/EF.Model.ssdl|res://*/EF.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC-DELL-STRAAD\STRAAD1703142156;initial catalog=straad_generaldesktopapplication_Ct1x9w3c_001;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--Local Mode. It works-->
+    <add name="straad_generaldesktopapplication_pcpcpcpc_001Entities" connectionString="metadata=res://*/EF.Model.csdl|res://*/EF.Model.ssdl|res://*/EF.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC-DELL-STRAAD\STRAAD1703162325;initial catalog=straad_generaldesktopapplication_Ct1x9w3c;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 
-    <!--<add name="straad_generaldesktopapplication_cpcpcpcp_001Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC-DELL-STRAAD\STRAAD1703142156;initial catalog=straad_generaldesktopapplication_cpcpcpcp_001;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <!--<add name="straad_generaldesktopapplication_cpcpcpcp_001Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.100;initial catalog=straad_generaldesktopapplication_cpcpcpcp_001;user id=internal_straad_generaldesktopapplication_cpcpcpcp_001;password=6[A9$Sd#u-5C,HJUsm_5Rxts-CtVa,7SmE6;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    
-  <add name="straad_generaldesktopapplication_pcpcpcpc_001Entities" connectionString="metadata=res://*/EF.Model.csdl|res://*/EF.Model.ssdl|res://*/EF.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC-DELL-STRAAD\STRAAD1703162325;initial catalog=straad_generaldesktopapplication_Ct1x9w3c;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
+    
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
