--- a/General-Desktop-Application/General-Desktop-Application/App.config
+++ b/General-Desktop-Application/General-Desktop-Application/App.config
@@ -27,13 +27,14 @@
     </General_Desktop_Application.Properties.Settings>
   </userSettings>
   
-  <connectionStrings>
+  <!--<connectionStrings>
     
-    <!--Local Mode. It works-->
-    <add name="straad_generaldesktopapplication_pcpcpcpc_001Entities" connectionString="metadata=res://*/EF.Model.csdl|res://*/EF.Model.ssdl|res://*/EF.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC-DELL-STRAAD\STRAAD1703162325;initial catalog=straad_generaldesktopapplication_Ct1x9w3c;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    Local Mode. It works
+    <add name="straad_generaldesktopapplication_pcpcpcpc_001Entities" connectionString="metadata=res://*/EF.Model.csdl|res://*/EF.Model.ssdl|res://*/EF.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC-DELL-STRAAD\STRAAD1703162325;initial catalog=straad_generaldesktopapplication_Ct1x9w3c;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    
+  </connectionStrings>-->
 
-  <entityFramework>
-    
+  <entityFramework>    
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
